Replace getFirst() to get(0) for JDK 17 compatibility